@@ -1,21 +1,21 @@
 package org.harryng.demo.impl.auth.service;
 
+import io.micrometer.common.util.StringUtils;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Path;
+import jakarta.validation.metadata.ConstraintDescriptor;
 import lombok.RequiredArgsConstructor;
 import org.harryng.demo.api.constant.ResponseCode;
 import org.harryng.demo.api.exception.CodedException;
-import org.harryng.demo.api.util.SecurityUtil;
-import org.harryng.demo.api.util.SessionHolder;
+import org.harryng.demo.api.util.*;
 import org.harryng.demo.impl.auth.dto.AuthenticationInfo;
 import org.harryng.demo.impl.user.dto.UserDto;
 import org.harryng.demo.impl.user.service.UserService;
-import org.harryng.demo.api.util.SessionUtil;
 import org.springframework.stereotype.Service;
 
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -24,9 +24,13 @@ public class AuthServiceImpl implements AuthService {
     private final UserService userService;
 
     @Override
-    public AuthenticationInfo loginByUsernamePassword(String username, String password) throws Exception {
-        if (password == null || password.isBlank()) {
-            throw new CodedException(ResponseCode.AUTH_PASSWD_NOT_MATCH, "Password is empty");
+    public ValidationResult<AuthenticationInfo> loginByUsernamePassword(String username, String password) throws Exception {
+        if (StringUtils.isBlank(username) || StringUtils.isBlank(password)) {
+//            throw new CodedException(ResponseCode.AUTH_PASSWD_NOT_MATCH, "Password is empty");
+            final Set<ValidationError> validationErrors = new LinkedHashSet<>();
+            validationErrors.add(ValidationError.of("username", "Username is empty", ""));
+            validationErrors.add(ValidationError.of("password", "Password is empty", ""));
+            return ValidationResult.fromValidationErrors(validationErrors, null);
         }
         final Optional<UserDto> userOpt = userService.getByUsername(username, Collections.emptyMap());
         if (userOpt.isPresent()) {
@@ -61,7 +65,7 @@ public class AuthServiceImpl implements AuthService {
             authenticationInfo.setUsername(user.getUsername());
             authenticationInfo.setRequestTime(LocalDateTime.now());
             authenticationInfo.setToken(token);
-            return authenticationInfo;
+            return ValidationResult.fromValidationErrors(Collections.emptySet(), authenticationInfo);
         }
         throw new CodedException(ResponseCode.AUTH_CANNOT_FIND_USERNAME, "User is not found");
     }
